- update to webpack 4 - add decorators - rewrite CommentList to stateless component

--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>webpack 4 quickstart</title>
 </head>
 <body>
     <div id="container"></div>
-    <script src="/static/bundle.js"></script>
 </body>
 </html>
