- add react-select - add react animation

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>webpack 4 quickstart</title>
+    <title>webpack 4 and react + redux</title>
 </head>
 <body>
     <div id="container"></div>
