--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,6 @@
     <title>webpack 4 and react + redux</title>
 </head>
 <body>
-    <div id="container"></div>
+    <div id="root"></div>
 </body>
 </html>
